--- a/mpc_controller/Makefile
+++ b/mpc_controller/Makefile
@@ -48,27 +48,27 @@ cmake_force:
 SHELL = /bin/sh
 
 # The CMake executable.
-CMAKE_COMMAND = /home/lw/cmake/cmake-3.31.3-linux-x86_64/bin/cmake
+CMAKE_COMMAND = /usr/bin/cmake
 
 # The command to remove a file.
-RM = /home/lw/cmake/cmake-3.31.3-linux-x86_64/bin/cmake -E rm -f
+RM = /usr/bin/cmake -E rm -f
 
 # Escaping for special characters.
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /home/lw/catkin_ws/src/quadrotor_rsmpc/mpc_controller
+CMAKE_SOURCE_DIR = /home/go2/ws_my/src/quadrotor_mpc/mpc_controller
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /home/lw/catkin_ws/src/quadrotor_rsmpc/mpc_controller
+CMAKE_BINARY_DIR = /home/go2/ws_my/src/quadrotor_mpc/mpc_controller
 
 #=============================================================================
 # Targets provided globally by CMake.
 
 # Special rule for the target edit_cache
 edit_cache:
-	@$(CMAKE_COMMAND) -E cmake_echo_color "--switch=$(COLOR)" --cyan "Running CMake cache editor..."
-	/home/lw/cmake/cmake-3.31.3-linux-x86_64/bin/ccmake -S$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+	@$(CMAKE_COMMAND) -E cmake_echo_color "--switch=$(COLOR)" --cyan "No interactive CMake dialog available..."
+	/usr/bin/cmake -E echo No\ interactive\ CMake\ dialog\ available.
 .PHONY : edit_cache
 
 # Special rule for the target edit_cache
@@ -78,7 +78,7 @@ edit_cache/fast: edit_cache
 # Special rule for the target rebuild_cache
 rebuild_cache:
 	@$(CMAKE_COMMAND) -E cmake_echo_color "--switch=$(COLOR)" --cyan "Running CMake to regenerate build system..."
-	/home/lw/cmake/cmake-3.31.3-linux-x86_64/bin/cmake --regenerate-during-build -S$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+	/usr/bin/cmake --regenerate-during-build -S$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
 .PHONY : rebuild_cache
 
 # Special rule for the target rebuild_cache
@@ -87,9 +87,9 @@ rebuild_cache/fast: rebuild_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/lw/catkin_ws/src/quadrotor_rsmpc/mpc_controller/CMakeFiles /home/lw/catkin_ws/src/quadrotor_rsmpc/mpc_controller//CMakeFiles/progress.marks
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/go2/ws_my/src/quadrotor_mpc/mpc_controller/CMakeFiles /home/go2/ws_my/src/quadrotor_mpc/mpc_controller//CMakeFiles/progress.marks
 	$(MAKE) $(MAKESILENT) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/lw/catkin_ws/src/quadrotor_rsmpc/mpc_controller/CMakeFiles 0
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/go2/ws_my/src/quadrotor_mpc/mpc_controller/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
